Fixed link color (contrast)

--- a/style.css
+++ b/style.css
@@ -28,3 +28,11 @@ div {
   color: #000;
   padding: 10px 10px 10px 10px;
 }
+
+a {
+  background-color: #FF0000;
+  color: #000;
+  padding-left: 5px;
+  padding-right: 5px;
+  font-weight: bold;
+}
